Fix href colors wrong

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <sup class="tinyunder">&nbsp;&nbsp;&nbsp;&nbsp;("no vee may trem")</sup></span></h1>
 
             <h1 class="biotext"><u>Work in Progress</u><br><br>Novimatrem is a big idea, and some of the planned content types/items are not ready yet.<br><br>
-            Please check back later for this content to be available. <a href="https://novimatrem.gitlab.io" target="_top">Return to the homepage.</a></h1><br><br>
+            Please check back later for this content to be available. <a href="https://novimatrem.gitlab.io" target="_top" class="blogpitchurl">Return to the homepage.</a></h1><br><br>
             (blog goes here)  
 
             <h1 class="icondescribe"></h1>
@@ -36,7 +36,7 @@
                       <span title="Novimatrem - Home" alt="Novimatrem - Home" class="iconthing"><img class="iconthing" src="./assets/pfp-back.png">
                     </a></span>
                 </li>
-                    <p style=""><a href="https://novimatrem.gitlab.io" target="_top">Back to homepage.</a></p>
+                    <p style=""><a href="https://novimatrem.gitlab.io" target="_top" class="blogpitchurl">Back to homepage.</a></p>
                 </div></div>
     </center>        
             </ul>
