--- a/ytc.html
+++ b/ytc.html
@@ -3,15 +3,15 @@
    <head>
       <meta name="robots" content="noindex,nofollow">
       <meta charset="UTF-8">
-      <meta http-equiv="refresh" content="0; url=https://www.youtube.com/@novimatrem/community">
+      <meta http-equiv="refresh" content="0; url=https://novimatrem.uk/tagged-blog-posts">
       <script type="text/javascript">
-         window.location.href = "https://www.youtube.com/@novimatrem/community"
+         window.location.href = "https://novimatrem.uk/tagged-blog-posts"
       </script>
       <title>Page Redirection</title>
    </head>
    <body>
       <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
-      If you are not redirected automatically, follow this <a href='https://www.youtube.com/@novimatrem/community'>link to youtube.com/@novimatrem/community</a>.
+      If you are not redirected automatically, follow this <a href='https://novimatrem.uk/tagged-blog-posts'>link to https://novimatrem.uk/tagged-blog-posts</a>.
    </body>
 </html>
 
